vlib/v/checker/tests/unimplemented_interface_d.out
vlib/v/checker/tests/unimplemented_interface_d.v:12:6: error: `Cat` incorrectly implements method `speak`
   10 |
   11 | fn main() {
   12 |     foo(Cat{})
      |         ~~~~~
   13 | }
